--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:              BitBees
-email:              
+email:              vemugantisesha@iitbhilai.ac.in
 description:        The Website of Legends
 author:             S.A.C inc.
 baseurl:            ""
